Add unique option
